# CineTerm

./: Cargo.toml  README.md  boi.txt  boi10.txt  boi11.txt  boi12.txt  boi13.txt  boi14.txt  boi15.txt  boi16.txt  boi2.txt  boi3.txt  boi4.txt  boi5.txt  boi6.txt  boi7.txt  boi8.txt  boi9.txt
src/: lib.rs  main.rs
