[package]
name = "cine_term"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "CineTerm is a crate to make animations/movies to be displayed in the terminal"
repository = "https://github.com/FelixBrgm/cine_term"
homepage = "https://github.com/FelixBrgm/cine_term"
readme = "README.md"

[dependencies]

[lib]
path = "src/lib.rs"

